Fix really annoying vertical misalignment in header (if one element uses padding they should all use paffing

--- a/community.css
+++ b/community.css
@@ -10,13 +10,15 @@
     font-size: 36px;
     text-align: center;
     font-weight: bold;
+    padding: 10px;
 }
 
 .centertext {
     text-align: center;
+    padding: 10px;
 }
 
-.righttext {
+.usertext {
     text-align: right;
     padding: 10px;
 }
